# rust-as-microservice

./: .gitignore  README.md  raw-results.md
go/: Makefile  go.mod  go.sum  main.go
java/: build.gradle  settings.gradle
java-async/: .gitignore  build.gradle
java-async/migrations/: 20230729115108_v-1.sql
java-async/src/main/java/com/github/hebra/: App.java
java-async/src/main/java/com/github/hebra/config/: AppConfig.java  DataJdbcConfiguration.java  SQLiteDialect.java  SQLiteDialectResolver.java  SpringDataJdbcConfiguration.java
java-async/src/main/java/com/github/hebra/controller/: GlobalErrorHandler.java  UsersController.java
java-async/src/main/java/com/github/hebra/exception/: InvalidEmailException.java  LowScorePasswordException.java  UserWithEmailException.java
java-async/src/main/java/com/github/hebra/model/: ExceptionInfoResponse.java  SignupUser.java  (+1 more)
java-async/src/main/resources/: application.yml
java-graal/: .env.sample  .gitignore  build.gradle
java/src/main/resources/: application.yaml  persistence.properties
node/: app.js  package-lock.json  package.json
node-hapi/: .gitignore  appHapi.js  logic.js  package-lock.json  package.json
node-hapi/migrations/: 20230731014618_indexes.sql
node-koa/: appKoa.js  logic.js  package-lock.json  package.json
node-koa/migrations/: 20230804115108_v-1.sql
perf-test-cli/: .env.sample  Cargo.toml
perf-test-cli/src/: main.rs
rust-api/: .env.sample  .gitignore  Cargo.toml
rust-api/src/: main.rs
rust-api/src/api/: api_error.rs  mod.rs  spec.rs  users_api.rs
rust-api/src/db/: users_db.rs
(+15 files in other folders)
