[package]
name = "perf-test-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.28"
names = "0.14.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.178", features = ["derive", "serde_derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }
