[package]
name = "rust-as-microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.1"
async_once = "0.2.6"
base64 = "0.21.2"
dotenv = "0.15.0"
email_address = { version = "0.2.4", features = ["serde", "serde_support"] }
lazy_static = "1.4.0"
poem = { version = "1.3.57" }
poem-openapi = { version = "3.0.0", features = ["rapidoc", "email"] }
serde = { version = "1.0.171", features = ["derive", "serde_derive"] }
sqlx = { version = "0.7.1", features = ["sqlite", "sqlx-sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }
uuid = { version = "1.4.0", features = ["getrandom", "serde", "v4", "fast-rng", "macro-diagnostics"] }
zxcvbn = "2.2.2"

